[package]
name = "rocket_seek_stream"
version = "0.2.0"
description="Rocket-rs responder to range requests using types that implement Read + Seek"
authors = ["Ryan Dzengelewski <rdzengelewski@gmail.com>"]
edition = "2018"
license="MIT"
repository="https://github.com/rydz/rocket_seek_stream"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
tree_magic = "0.2.1"
range_header = "0.2.0"
rand = "0.7.0"